# edi

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docker/: index.html
docs/: databases.md  docker.md  faq.md  first_steps.md  index.md  resources.md  rules.md  running_jobs.md  software.md
faq/: index.html
first_steps/: index.html
resources/: index.html
rules/: index.html
running_jobs/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/databases/: index.html
site/docker/: index.html
site/faq/: index.html
site/first_steps/: index.html
site/resources/: index.html
site/rules/: index.html
site/search/: search_index.json
site/software/: index.html
software/: index.html
